--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -303,9 +303,11 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/DoorBP_2.DoorBP_2
 OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Gun/BulletBP.BulletBP
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/DoorBP.DoorBP
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/ButtonBP.ButtonBP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1696,32 +1698,32 @@ LastLogListing=PIE
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem1=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
-MRUItem2=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012
-MRUItem3=/Game/SideScrollerBP/BuildFiles/trimsheetscifi
-MRUItem4=/Niagara/DefaultAssets/Templates/Systems/SimpleExplosion
-MRUItem5=/Game/Character/MainChar/Mesh/silah/Brass
-MRUItem6=/Game/Character/MainChar/Mesh/silah/buletandkovan_Casing
-MRUItem7=/Game/Character/MainChar/Mesh/silah/Bronze
-MRUItem8=/Game/Character/MainChar/Mesh/silah/buletandkovan_Bullet
-MRUItem9=/Game/SideScrollerBP/BuildFiles/Materials/Material_Normal_OpenGL
-MRUItem10=/Game/Character/MainChar/Mesh/fesadam/pngtree-black-rope-isolated-train-png-image_10862414
-MRUItem11=/Game/Character/MainChar/Mesh/fesadam/fes
-MRUItem12=/Game/Character/MainChar/Mesh/fesadam/withcape
-MRUItem13=/Game/Character/MainChar/Mesh/fesadam/S_PhysicsAsset
-MRUItem14=/Game/Character/MainChar/Mesh/fesadam/MrPullMesh
-MRUItem15=/Game/Character/MainChar/Materials/cape
-MRUItem16=/Game/Character/MainChar/Mesh/fesadam/S
-MRUItem17=/Game/SideScrollerBP/Blueprints/DoorBP_2
-MRUItem18=/Game/SideScrollerBP/Blueprints/DoorBP
-MRUItem19=/Game/Character/Animations/pistolrunwalkfrontbackwards
+MRUItem0=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem1=/Game/SideScrollerBP/Blueprints/DoorBP
+MRUItem2=/Game/SideScrollerBP/Blueprints/DoorBP_2
+MRUItem3=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
+MRUItem4=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem5=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012
+MRUItem6=/Game/SideScrollerBP/BuildFiles/trimsheetscifi
+MRUItem7=/Niagara/DefaultAssets/Templates/Systems/SimpleExplosion
+MRUItem8=/Game/Character/MainChar/Mesh/silah/Brass
+MRUItem9=/Game/Character/MainChar/Mesh/silah/buletandkovan_Casing
+MRUItem10=/Game/Character/MainChar/Mesh/silah/Bronze
+MRUItem11=/Game/Character/MainChar/Mesh/silah/buletandkovan_Bullet
+MRUItem12=/Game/SideScrollerBP/BuildFiles/Materials/Material_Normal_OpenGL
+MRUItem13=/Game/Character/MainChar/Mesh/fesadam/pngtree-black-rope-isolated-train-png-image_10862414
+MRUItem14=/Game/Character/MainChar/Mesh/fesadam/fes
+MRUItem15=/Game/Character/MainChar/Mesh/fesadam/withcape
+MRUItem16=/Game/Character/MainChar/Mesh/fesadam/S_PhysicsAsset
+MRUItem17=/Game/Character/MainChar/Mesh/fesadam/MrPullMesh
+MRUItem18=/Game/Character/MainChar/Materials/cape
+MRUItem19=/Game/Character/MainChar/Mesh/fesadam/S
 
 [PlacementMode]
-RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012.trimsheetscifi_Plane_012;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/DoorBP_2.DoorBP_2;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/DoorBP.DoorBP;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ButtonBP.ButtonBP;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/DoorBP_2.DoorBP_2;
+RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_012.trimsheetscifi_Plane_012;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/DoorBP.DoorBP;
 RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/trimsheetscifi_Plane_011.trimsheetscifi_Plane_011;
 RecentlyPlaced=/Game/SideScrollerBP/sound/menumuzu.menumuzu;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/MovingPlatform.MovingPlatform;
