--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,3 +29,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AntiAliasing=2
 
+[/Script/UnrealEd.CookerSettings]
+bIterativeCookingForLaunchOn=False
+
