--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,13 +1,16 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A8FF89404445A2992C57BEA7E47FC760
-ProjectName=Side Scroller BP Game Template
+ProjectName="SCI FI Side Scroller "
 CompanyName=AHISD Studios
 Description=best jumper ever
+CopyrightNotice=ALL OWNED  BY AHISD STUDIOS
+bUseBorderlessWindow=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-FullRebuild=True
+FullRebuild=False
 IncludeDebugFiles=True
 BuildConfiguration=PPBC_Debug
 bIncludeNativizedAssetsInProjectGeneration=False
-BlueprintNativizationMethod=Inclusive
+BlueprintNativizationMethod=Disabled
+IncludePrerequisites=False
 
