--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -231,14 +231,14 @@ SceneComponent=
 Actor=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Rendering Features.Rendering Features,
 DoorBP_C=
 ButtonBP_C=
-K2Node_VariableGet=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+K2Node_VariableGet=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 MovingPlatform_C=StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 PropertyWrapper=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
-SideScrollerCharacter_C=
+SideScrollerCharacter_C=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
 CameraComponent=CameraComponent.PostProcess.Rendering Features,
-CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,
-K2Node_VariableSet=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+CapsuleComponent=
+K2Node_VariableSet=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 AimOffsetBlendSpace1D=AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AimOffsetBlendSpace1D.BlendSamples.GroupName,
 Mainchar_AnimBp_C=
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
@@ -258,7 +258,7 @@ StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 boru_C=StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 ElevatorBP_C=StaticMeshActor.Physics.ConstraintsGroup,
-EnemyBP_C=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
+EnemyBP_C=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 NavMeshBoundsVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
 Character=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
 ammochest_C=
@@ -266,11 +266,13 @@ StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,St
 SphereComponent=SphereComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 FbxExportOption=
+K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -290,7 +292,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Character/Animations
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -323,9 +325,6 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/ElevatorBP.ElevatorBP
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/DoorBP.DoorBP
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/ButtonBP.ButtonBP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1745,13 +1744,15 @@ ChildActorComponent.Cooking=True
 ChildActorComponent.Events=True
 ammochest_C.Default=True
 StaticMesh.Thumbnail=True
+K2Node_BreakStruct.PinOptions=True
+RectLightComponent.Collision=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1796,7 +1797,7 @@ SoundWave="\"Object.Format.Format|Quality\" \"Object.Playback.Playback|Streaming
 SoundBase="\"Object.Format.Format|Quality\" \"Object.Playback.Playback|Streaming\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 InterpToMovementComponent=
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+ActorComponent=
 SoundAttenuation="\"Object.Settings.Attenuation.SubmixSendSettings\" \"Object.Settings.Attenuation.AttenuationShapeExtents\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1806,13 +1807,13 @@ PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 ClothingAssetCommon="\"Object.Config.ClothConfigs\" "
 ClothingAssetBase="\"Object.Config.ClothConfigs\" "
-StaticMeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+PrimitiveComponent=
+SceneComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+ShapeComponent=
 SoundNodeMixer="\"Object.Mixer.InputVolume\" "
 SoundNode=
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
@@ -1829,12 +1830,13 @@ SideScrollerCharacter_C=
 Character=
 Pawn=
 CapsuleComponent=
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EnemyBP_C=
 SoundNodeRandom="\"Object.Random.Weights\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+SkeletalMesh="\"Object.ImportSettings.AssetImportData.Object.Transform.ImportTranslation\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1953,26 +1955,26 @@ LastLogListing=FBXImport
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/DoorBP
-MRUItem1=/Game/SideScrollerBP/Blueprints/ButtonBP
-MRUItem2=/Game/SideScrollerBP/Blueprints/ElevatorBP
-MRUItem3=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
-MRUItem4=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem5=/Game/SideScrollerBP/BuildFiles/trimsheetscifichest_Cube_014
-MRUItem6=/Game/SideScrollerBP/Blueprints/ammochest
-MRUItem7=/Game/SideScrollerBP/BuildFiles/trimsheetscifichest_Cube_012
-MRUItem8=/Game/SideScrollerBP/Blueprints/chest
-MRUItem9=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
-MRUItem10=/Game/SideScrollerBP/Blueprints/Enemy/omurcekwalk_OMURCEKARMATUR_OMURCEKARMATURAction
-MRUItem11=/Game/SideScrollerBP/Blueprints/Enemy/omurcekwalk_OMURCEKARMATUR_EmptyAction
-MRUItem12=/Game/SideScrollerBP/Blueprints/Enemy/araknit_Anim_Armature_ArmatureAction
-MRUItem13=/Game/SideScrollerBP/Blueprints/Enemy/araknit_Skeleton
-MRUItem14=/Game/SideScrollerBP/Blueprints/Enemy/araknit
-MRUItem15=/Game/SideScrollerBP/Blueprints/Enemy/araknitidlean_Armature_EmptyAction
-MRUItem16=/Game/SideScrollerBP/Blueprints/Enemy/araknitidlean_Armature_ArmatureAction
-MRUItem17=/Game/SideScrollerBP/Blueprints/Enemy/araknitidle_Armature_ArmatureAction
-MRUItem18=/Game/SideScrollerBP/Blueprints/Enemy/araknitidle_Anim_Armature_ArmatureAction
-MRUItem19=/Game/SideScrollerBP/Blueprints/Enemy/araknitidle
+MRUItem0=/Game/Character/Animations/Mainchar_AnimBp
+MRUItem1=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_SKELETON1
+MRUItem2=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_MESH
+MRUItem3=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem4=/Game/Character/MainChar/Mesh/fesadam/S_PhysicsAsset
+MRUItem5=/Game/Character/MainChar/Mesh/UE4_Mannequin_Skeleton
+MRUItem6=/Game/Character/MainChar/Mesh/fesadam/withcape
+MRUItem7=/Game/Character/Animations/PistolAnimations/HitReaction1_UE
+MRUItem8=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem9=/Game/SideScrollerBP/Blueprints/DoorBP
+MRUItem10=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem11=/Game/SideScrollerBP/Blueprints/ElevatorBP
+MRUItem12=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
+MRUItem13=/Game/SideScrollerBP/BuildFiles/trimsheetscifichest_Cube_014
+MRUItem14=/Game/SideScrollerBP/Blueprints/ammochest
+MRUItem15=/Game/SideScrollerBP/BuildFiles/trimsheetscifichest_Cube_012
+MRUItem16=/Game/SideScrollerBP/Blueprints/chest
+MRUItem17=/Game/SideScrollerBP/Blueprints/Enemy/omurcekwalk_OMURCEKARMATUR_OMURCEKARMATURAction
+MRUItem18=/Game/SideScrollerBP/Blueprints/Enemy/omurcekwalk_OMURCEKARMATUR_EmptyAction
+MRUItem19=/Game/SideScrollerBP/Blueprints/Enemy/araknit_Anim_Armature_ArmatureAction
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ammochest.ammochest;
@@ -2154,6 +2156,8 @@ EdGraph.Graph=True
 CapsuleComponent.Shape=True
 StaticMesh.LODCustomMode=True
 BoxComponent.Collision=True
+EnemyBP_C.Collision=True
+SkeletalMeshComponent.Animation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Material_001.Material_001=1
@@ -2261,6 +2265,9 @@ BoxComponent.Collision=True
 /Game/SideScrollerBP/Blueprints/ammochest.ammochest=1
 /Game/SideScrollerBP/BuildFiles/trimsheetscifichest_Cube_012.trimsheetscifichest_Cube_012=1
 /Game/SideScrollerBP/BuildFiles/trimsheetscifichest_Cube_014.trimsheetscifichest_Cube_014=1
+/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_MESH.OMURCEK_MESH=1
+/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_SKELETON1.OMURCEK_SKELETON1=1
+/Game/Character/Animations/PistolAnimations/HitReaction2_UE.HitReaction2_UE=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2300,7 +2307,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=181.600 Y=0.000
-WindowSize=X=1355.200 Y=795.200
+WindowSize=X=1356.800 Y=796.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
