--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -138,7 +138,6 @@ MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 bRealtimeMaterialViewport=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [LightingBuildOptions]
 QualityLevel=1
@@ -257,11 +256,11 @@ CharacterMovementComponent=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 boru_C=StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-ElevatorBP_C=StaticMeshActor.Physics.ConstraintsGroup,
+ElevatorBP_C=BoxComponent.Collision.Collision,
 EnemyBP_C=
 NavMeshBoundsVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
 Character=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
-ammochest_C=
+ammochest_C=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,
 SphereComponent=SphereComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
@@ -271,7 +270,7 @@ SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 K2Node_FunctionEntry=
 staminaWidget_C=
 healthbarWidget_C=
-healthchest_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Rendering Features.Rendering Features,
+healthchest_C=
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -328,7 +327,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/ElevatorBP.ElevatorBP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1035,7 +1035,7 @@ SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
 StaticMeshComponent.Variable=True
 StaticMeshComponent.TransformCommon=True
-StaticMeshComponent.Sockets=False
+StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Materials=True
 StaticMeshComponent.ComponentTick=True
@@ -1794,7 +1794,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendable
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1839,7 +1839,7 @@ SoundWave="\"Object.Format.Format|Quality\" \"Object.Playback.Playback|Streaming
 SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 InterpToMovementComponent=
 MovementComponent=
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 SoundAttenuation="\"Object.Settings.Attenuation.SubmixSendSettings\" \"Object.Settings.Attenuation.AttenuationShapeExtents\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1851,8 +1851,8 @@ ClothingAssetCommon="\"Object.Config.ClothConfigs\" "
 ClothingAssetBase="\"Object.Config.ClothConfigs\" "
 StaticMeshComponent=
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
@@ -1898,7 +1898,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=True
-bImportMaterials=False
+bImportMaterials=True
 bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
@@ -1994,32 +1994,32 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/healthchest
-MRUItem1=/Game/SideScrollerBP/Blueprints/ammochest
-MRUItem2=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
-MRUItem3=/Game/SideScrollerBP/Blueprints/ButtonBP
-MRUItem4=/Game/SideScrollerBP/Blueprints/DoorBP_2
-MRUItem5=/Game/SideScrollerBP/Blueprints/AmmoWidget
-MRUItem6=/Game/SideScrollerBP/Blueprints/healthbarWidget
-MRUItem7=/Game/SideScrollerBP/Blueprints/staminaWidget
-MRUItem8=/Game/SideScrollerBP/Blueprints/healthbarBP
-MRUItem9=/Game/SideScrollerBP/sound/dieremesherforomurcek
-MRUItem10=/Game/SideScrollerBP/sound/hitremesherforomurcek
-MRUItem11=/Game/SideScrollerBP/sound/dieremesher
-MRUItem12=/Game/SideScrollerBP/sound/hitremesher
-MRUItem13=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
-MRUItem14=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem15=/Game/SideScrollerBP/Blueprints/Enemy/NewSubsurfaceProfile
-MRUItem16=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_MESH
-MRUItem17=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_MESH_Physics3
-MRUItem18=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_SKELETON1
-MRUItem19=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEKIDLE
+MRUItem0=/Game/SideScrollerBP/Blueprints/ammochest
+MRUItem1=/Game/SideScrollerBP/Blueprints/ElevatorBP
+MRUItem2=/Game/SideScrollerBP/Blueprints/healthchest
+MRUItem3=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
+MRUItem4=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
+MRUItem5=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
+MRUItem6=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem7=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem8=/Game/SideScrollerBP/Blueprints/DoorBP_2
+MRUItem9=/Game/SideScrollerBP/Blueprints/AmmoWidget
+MRUItem10=/Game/SideScrollerBP/Blueprints/healthbarWidget
+MRUItem11=/Game/SideScrollerBP/Blueprints/staminaWidget
+MRUItem12=/Game/SideScrollerBP/Blueprints/healthbarBP
+MRUItem13=/Game/SideScrollerBP/sound/dieremesherforomurcek
+MRUItem14=/Game/SideScrollerBP/sound/hitremesherforomurcek
+MRUItem15=/Game/SideScrollerBP/sound/dieremesher
+MRUItem16=/Game/SideScrollerBP/sound/hitremesher
+MRUItem17=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
+MRUItem18=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem19=/Game/SideScrollerBP/Blueprints/Enemy/NewSubsurfaceProfile
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/healthchest.healthchest;
@@ -2323,6 +2323,7 @@ Actor.Actor=True
 /Game/SideScrollerBP/Blueprints/healthbarWidget.healthbarWidget=1
 /Game/SideScrollerBP/Blueprints/staminaWidget.staminaWidget=1
 /Game/SideScrollerBP/Blueprints/healthchest.healthchest=1
+/Game/SideScrollerBP/BuildFiles/Materials/firstaid.firstaid=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
