--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -226,7 +226,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,
-SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 Actor=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Rendering Features.Rendering Features,
 DoorBP_C=SkeletalMeshComponent.Collision.Collision,
 ButtonBP_C=CapsuleComponent.Collision.Collision,
@@ -256,7 +256,7 @@ CharacterMovementComponent=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 boru_C=StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-ElevatorBP_C=BoxComponent.Collision.Collision,
+ElevatorBP_C=BoxComponent.Collision.Collision,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
 EnemyBP_C=
 NavMeshBoundsVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
 Character=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,
@@ -328,7 +328,9 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/ElevatorBP.ElevatorBP
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/healthchest.healthchest
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/ammochest.ammochest
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1794,7 +1796,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendable
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1839,7 +1841,7 @@ SoundWave="\"Object.Format.Format|Quality\" \"Object.Playback.Playback|Streaming
 SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 InterpToMovementComponent=
 MovementComponent=
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+ActorComponent=
 SoundAttenuation="\"Object.Settings.Attenuation.SubmixSendSettings\" \"Object.Settings.Attenuation.AttenuationShapeExtents\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1852,7 +1854,7 @@ ClothingAssetBase="\"Object.Config.ClothConfigs\" "
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+SceneComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
@@ -1994,31 +1996,31 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
 MRUItem0=/Game/SideScrollerBP/Blueprints/ammochest
-MRUItem1=/Game/SideScrollerBP/Blueprints/ElevatorBP
-MRUItem2=/Game/SideScrollerBP/Blueprints/healthchest
-MRUItem3=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
-MRUItem4=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
-MRUItem5=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
-MRUItem6=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
-MRUItem7=/Game/SideScrollerBP/Blueprints/ButtonBP
-MRUItem8=/Game/SideScrollerBP/Blueprints/DoorBP_2
-MRUItem9=/Game/SideScrollerBP/Blueprints/AmmoWidget
-MRUItem10=/Game/SideScrollerBP/Blueprints/healthbarWidget
-MRUItem11=/Game/SideScrollerBP/Blueprints/staminaWidget
-MRUItem12=/Game/SideScrollerBP/Blueprints/healthbarBP
-MRUItem13=/Game/SideScrollerBP/sound/dieremesherforomurcek
-MRUItem14=/Game/SideScrollerBP/sound/hitremesherforomurcek
-MRUItem15=/Game/SideScrollerBP/sound/dieremesher
-MRUItem16=/Game/SideScrollerBP/sound/hitremesher
-MRUItem17=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
-MRUItem18=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem1=/Game/SideScrollerBP/Blueprints/healthchest
+MRUItem2=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem3=/Game/SideScrollerBP/Blueprints/ElevatorBP
+MRUItem4=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
+MRUItem5=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
+MRUItem6=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
+MRUItem7=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem8=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem9=/Game/SideScrollerBP/Blueprints/DoorBP_2
+MRUItem10=/Game/SideScrollerBP/Blueprints/AmmoWidget
+MRUItem11=/Game/SideScrollerBP/Blueprints/healthbarWidget
+MRUItem12=/Game/SideScrollerBP/Blueprints/staminaWidget
+MRUItem13=/Game/SideScrollerBP/Blueprints/healthbarBP
+MRUItem14=/Game/SideScrollerBP/sound/dieremesherforomurcek
+MRUItem15=/Game/SideScrollerBP/sound/hitremesherforomurcek
+MRUItem16=/Game/SideScrollerBP/sound/dieremesher
+MRUItem17=/Game/SideScrollerBP/sound/hitremesher
+MRUItem18=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
 MRUItem19=/Game/SideScrollerBP/Blueprints/Enemy/NewSubsurfaceProfile
 
 [PlacementMode]
